feito muitas melhorias

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,54 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Home</ion-title>
+    <ion-buttons>
+      <ion-button id="button-profile">
+        <ion-icon name="person-circle" id="icon-profile"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title></ion-title>
+
+    <div class="container" >
+      <input type="text" placeholder="Search...">
+      <div class="search"></div>
+    </div>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
-  <ion-button routerLink="/login">acessar</ion-button>
+  <ion-grid>
+
+
+    <ion-row>
+      <ion-col>
+        <ion-card>
+
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-thumbnail slot="end">
+                  <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+                </ion-thumbnail>
+                <p>asdas</p>
+                <p>asds</p>
+              </ion-item>
+            </ion-list>
+
+          </ion-card-content>
+
+        </ion-card>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+
+
+
+
 </ion-content>
