--- a/src/app/pages/paths/paths.page.html
+++ b/src/app/pages/paths/paths.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" >
     <ion-tab-button tab="home">
-      <ion-icon name="home"></ion-icon>
-      Home
+      <i class="bi bi-hospital-fill icons-tab" ></i>
+      Emergência
     </ion-tab-button>
     <ion-tab-button tab="mapa">
-      <ion-icon name="map"></ion-icon>
+      <ion-icon name="map" class="icons-tab"></ion-icon>
       Mapa
     </ion-tab-button>
     <ion-tab-button tab="telefones">
-      <ion-icon name="call"></ion-icon>
+      <ion-icon name="call" class="icons-tab"></ion-icon>
       Telefones
     </ion-tab-button>
     <ion-tab-button tab="configuracoes">
-      <ion-icon name="settings"></ion-icon>
+      <ion-icon name="settings" class="icons-tab"></ion-icon>
       Configurações
     </ion-tab-button>
   </ion-tab-bar>
