--- a/src/app/pages/configuracoes/configuracoes.page.html
+++ b/src/app/pages/configuracoes/configuracoes.page.html
@@ -11,19 +11,11 @@
     </ion-list-header>
 
     <ion-item button (click)="openThemeSelector()" detail="true">
-      <ion-icon name="contrast" slot="start" color="primary"></ion-icon>
+      <ion-icon name="contrast" slot="" color="primary"></ion-icon>
       <ion-label>Tema do App</ion-label>
       <ion-note slot="end">{{ getCurrentStatus() }}</ion-note>
     </ion-item>
 
-    <ion-item>
-      <ion-icon name="information-circle" slot="start" color="medium"></ion-icon>
-      <ion-label>Status Atual</ion-label>
-      <ion-note slot="end">
-        {{ themeInfo.appliedTheme === 'dark' ? 'Escuro' : 'Claro' }}
-        <span *ngIf="themeInfo.isAuto">(Auto)</span>
-      </ion-note>
-    </ion-item>
   </ion-list>
 
   <div class="info-section">
