--- a/src/app/pages/paths/paths.page.html
+++ b/src/app/pages/paths/paths.page.html
@@ -1,3 +1,4 @@
+
 <ion-tabs>
   <ion-tab-bar slot="bottom" >
     <ion-tab-button tab="home">
@@ -18,3 +19,7 @@
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
+<div class="footer">
+  <img alt="Silhouette of mountains" src="../../../assets/icons/filamed.png" />
+</div>
