--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,16 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons>
+    <ion-buttons slot="start">
       <ion-button id="button-profile">
         <ion-icon name="person-circle" id="icon-profile"></ion-icon>
       </ion-button>
     </ion-buttons>
+    
+    <ion-buttons slot="end">
+      <div class="container-search">
+        <input type="text" placeholder="Search...">
+        <div class="search"></div>
+      </div>
+    </ion-buttons>
+    
     <ion-title></ion-title>
-
-    <div class="container" >
-      <input type="text" placeholder="Search...">
-      <div class="search"></div>
-    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -52,3 +55,4 @@
 
 
 </ion-content>
+
