--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -14,118 +14,134 @@
 
 
 
+ion-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-.container {
+}
 
-  top: 0;
-  left: 0;
-  right: 0;
+ion-buttons {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+
+
+.container-search {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: auto; /* Isso força o container para a direita */
+  margin-right: 20px;
+}
+
+.search {
+  position: absolute;
+  margin: auto;
+  top: 0px;
+  right: 0; /* Alterado de left para right */
   bottom: 0;
+  width: 35px;
+  height: 35px;
+  background: #0e2b52;
+  border-radius: 50%;
+  transition: all 1s;
+  z-index: 4;
+  cursor: pointer;
+}
+
+
+// perninha do Lupa
+.search::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 20px;
+  right: 7px; /* Alterado de left para right */
+  width: 10px;
+  height: 2px;
+  background: white;
+  transform: rotate(45deg);
+  transition: all 0.3s;
+}
+
+// bolinha do Lupa
+.search::after {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 7px;
+  right: 13px; /* Alterado de left para right */
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 2px solid white;
+  transition: all 0.3s;
+}
+
+.container-search input {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0; /* Alterado de left para right */
+  bottom: 0;
+  width: 0px;
+  height: 30px;
+  outline: none;
+  border: none;
+  background: #0e2b52;
+  color: white;
+  padding: 0 20px 0 80px; /* Invertido o padding */
+  border-radius: 30px;
+  transition: all 1s;
+  opacity: 0;
+  z-index: 5;
+ /* Texto da direita para esquerda */
+}
+
+.container-search input:hover {
+  cursor: pointer;
+}
+
+.container-search input:focus {
+  width: 250px;
+  opacity: 1;
+  cursor: text;
+  padding: 0 20px 0 20px; /* Ajuste no padding quando expandido */
+}
+
+.container-search input:focus ~ .search {
+  right: 0px; /* Posição ajustada para a esquerda */
+  background: #0e2b52;
+  z-index: 6;
+}
+
+//perninha do X
+
+.container-search input:focus ~ .search::before {
+  top: 16px;
+  right: 4px; /* Alterado de left para right */
+  width: 25px;
+}
+
+.container-search input:focus ~ .search::after {
+  top: 16px;
+  right: 4px; /* Alterado de left para right */
+  width: 25px;
+  height: 2px;
+  border: none;
+  background: white;
+  border-radius: 0%;
+  transform: rotate(-45deg);
   
+}
 
-  .search {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 35px;
-    height: 35px;
-    background: #0e2b52;
-    border-radius: 50%;
-    transition: all 1s;
-    z-index: 4;
-    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-    // box-shadow: 0 0 25px 0 crimson;
-    &:hover {
-      cursor: pointer;
-    }
-    &::before {
-      content: "";
-      position: absolute;
-      margin: auto;
-      top: 12px;
-      right: 0;
-      bottom: 0;
-      left: 12px;
-      width: 10px;
-      height: 2px;
-      background: white;
-      transform: rotate(45deg);
-      transition: all .5s;
-    }
-    &::after {
-      content: "";
-      position: absolute;
-      margin: auto;
-      top: -5px;
-      right: 0;
-      bottom: 0;
-      left: -5px;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      border: 2px solid white;
-      transition: all .5s;
-    }
-  }
-  input {
+//
 
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    outline: none;
-    border: none;
-
-    background: #0e2b52;
-    color: white;
-    padding: 0 80px 0 20px;
-    border-radius: 30px;
-
-
-    transition: all 1s;
-    opacity: 0;
-    z-index: 5;
-
-
-    &:hover {
-      cursor: pointer;
-    }
-    &:focus {
-      width: 250px;
-      opacity: 1;
-      cursor: text;
-    }
-    &:focus ~ .search {
-      right: -240px;
-      background: #0e2b52;
-      z-index: 6;
-      &::before {
-        top: 0;
-        left: 0;
-        width: 25px;
-      }
-      &::after {
-        top: 0;
-        left: 0;
-        width: 25px;
-        height: 2px;
-        border: none;
-        background: white;
-        border-radius: 0%;
-        transform: rotate(-45deg);
-      }
-    }
-    &::placeholder {
-      color: white;
-      opacity: 0.5;
-
-    }
-  }
+.container-search input::placeholder {
+  color: white;
+ /* Alinhamento do placeholder à direita */
 }
