--- a/src/app/pages/configuracoes/configuracoes.page.html
+++ b/src/app/pages/configuracoes/configuracoes.page.html
@@ -1,6 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Configurações</ion-title>
+    <ion-buttons slot="start">
+      <ion-button id="button-profile" disabled>
+      </ion-button>
+    </ion-buttons>
+    
+    <div class="titulos-container">
+
+      <ion-title>Configurações</ion-title>
+
+
+    </div>
+
+    
+
+   
+
   </ion-toolbar>
 </ion-header>
 
