--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,6 +6,16 @@
       </ion-button>
     </ion-buttons>
     
+    <div class="titulos-container">
+
+      <ion-title>Olá, {{usuario}}!</ion-title>
+
+      <ion-subtitle>{{data}}</ion-subtitle> 
+
+    </div>
+
+    
+
     <ion-buttons slot="end">
       <div class="container-search">
         <input type="text" placeholder="Search...">
@@ -13,7 +23,7 @@
       </div>
     </ion-buttons>
     
-    <ion-title></ion-title>
+
   </ion-toolbar>
 </ion-header>
 
@@ -29,7 +39,7 @@
             <ion-list>
               <ion-item>
                 <ion-thumbnail slot="end">
-                  <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+                  <img alt="FilaMed Logo" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
                 </ion-thumbnail>
                 <p>asdas</p>
                 <p>asds</p>
