--- a/src/app/pages/paths/paths.page.html
+++ b/src/app/pages/paths/paths.page.html
@@ -20,6 +20,6 @@
   </ion-tab-bar>
 </ion-tabs>
 
-<div class="footer">
-  <img alt="Silhouette of mountains" src="../../../assets/icons/filamed.png" />
+<div class="footer-paths">
+  <img alt="Silhouette of mountains" src="../../../assets/icons/filamed-sem-fundo.png" />
 </div>
