--- a/src/app/pages/telefones/telefones.page.html
+++ b/src/app/pages/telefones/telefones.page.html
@@ -1,6 +1,22 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>telefones</ion-title>
+    <ion-buttons slot="start">
+      <ion-button id="button-profile">
+        <ion-icon name="person-circle" id="icon-profile"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    
+    <div class="titulos-container">
+
+      <ion-title>Telefones</ion-title>
+
+   
+    </div>
+
+    
+
+  
+
   </ion-toolbar>
 </ion-header>
 
