--- a/src/app/pages/configuracoes/configuracoes.page.scss
+++ b/src/app/pages/configuracoes/configuracoes.page.scss
@@ -1,4 +1,14 @@
-.info-section {
-    padding: 16px;
-    margin-top: 20px;
-  }
+
+  #button-profile{
+    --border-radius: 360px;
+    height: 50px;
+    margin: 10px;
+}
+
+#icon-profile{
+    font-size: 38px;
+}
+.input-wrapper{
+    display: inline !important;
+   
+}
