--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -1,6 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>mapa</ion-title>
+    <ion-buttons slot="start">
+      <ion-button id="button-profile">
+        <ion-icon name="person-circle" id="icon-profile"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    
+    <div class="titulos-container">
+
+      <ion-title>Mapa de Hospitais</ion-title>
+
+    
+
+    </div>
+
+    
+
+    <ion-buttons slot="end">
+      <div class="container-search">
+        <input type="text" placeholder="Search...">
+        <div class="search"></div>
+      </div>
+    </ion-buttons>
+    
+
   </ion-toolbar>
 </ion-header>
 
