--- a/src/app/pages/paths/paths.page.scss
+++ b/src/app/pages/paths/paths.page.scss
@@ -5,15 +5,17 @@
 ion-tab-bar{
     width: 95%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     border-radius: 100px;
 }
 
-.footer{
+.footer-paths{
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 10px;
+    height: 15px;
     background-color: #0e2b52;
     z-index: 0;
+    display: flex;
+    justify-content: center;    
 }
