--- a/src/global.scss
+++ b/src/global.scss
@@ -137,7 +137,148 @@ ion-card{
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
 }
+.titulos-container{
+  font-size: 12px;
+  width: 80%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #0e2b52;
+}
+.footer-paths{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 15px;
+  background-color: #0e2b52;
+  z-index: 0;
+  display: flex;
+  justify-content: center;    
+}
 
+
+.container-search {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: auto; /* Isso força o container para a direita */
+  margin-right: 20px;
+}
+
+.search {
+  position: absolute;
+  margin: auto;
+  top: 0px;
+  right: 0; /* Alterado de left para right */
+  bottom: 0;
+  width: 35px;
+  height: 35px;
+  background: #0e2b52;
+  border-radius: 50%;
+  transition: all 1s;
+  z-index: 4;
+  cursor: pointer;
+}
+
+
+// perninha do Lupa
+.search::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 20px;
+  right: 7px; /* Alterado de left para right */
+  width: 10px;
+  height: 2px;
+  background: #d8dde3;
+  transform: rotate(45deg);
+  transition: all 0.4s;
+}
+
+// bolinha do Lupa
+.search::after {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 7px;
+  right: 13px; /* Alterado de left para right */
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 2px solid #d8dde3;
+  transition: all 0.3s;
+}
+
+.container-search input {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0; /* Alterado de left para right */
+  bottom: 0;
+  width: 0px;
+  height: 30px;
+  outline: none;
+  border: none;
+  background: #d8dde3;
+  color: #0e2b52;
+  padding: 16px 10px 16px 10px; /* Invertido o padding */
+  border-radius: 30px;
+  transition: all 1s;
+  opacity: 0;
+  z-index: 5;
+  border: 2px solid #0e2b52;
+ /* Texto da direita para esquerda */
+}
+
+.container-search input:hover {
+  cursor: pointer;
+}
+
+.container-search input:focus {
+  width: 250px;
+  opacity: 1;
+  cursor: text;
+  padding: 16px 20px 16px 20px; /* Ajuste no padding quando expandido */
+
+
+}
+
+.container-search input:focus ~ .search {
+  right: 0px; /* Posição ajustada para a esquerda */
+  background: #0e2b52;
+  z-index: 6;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+//perninha do X
+
+.container-search input:focus ~ .search::before {
+  top: 16px;
+  right: 4px; /* Alterado de left para right */
+  width: 25px;
+  background-color: #d8dde3;
+}
+
+.container-search input:focus ~ .search::after {
+  top: 16px;
+  right: 4px; /* Alterado de left para right */
+  width: 25px;
+  height: 2px;
+  border: none;
+  background: #d8dde3;
+  border-radius: 0%;
+  transform: rotate(-45deg);
+  
+}
+
+//
+
+.container-search input::placeholder {
+  color: #0e2b52;
+ /* Alinhamento do placeholder à direita */
+}
 
 
 
@@ -193,8 +334,67 @@ body.dark .cancelarAction{
   --color: #a4071a !important;
   color: #a4071a !important;
 }
+body.dark .titulos-container{
+  color: #f5f5f5;
+}
+
+body.dark .footer-paths{
+  background-color: #1a1a1a;
+}
 
 
+body.dark .search {
+  background: #fff;
+}
+
+
+// perninha do Lupa
+body.dark .search::before {
+
+  background: #1a1a1a;
+
+}
+
+// bolinha do Lupa
+body.dark .search::after {
+
+  border: 2px solid #1a1a1a;
+
+}
+
+body.dark .container-search input {
+  background: #1a1a1a;
+  color: #fff;
+  border: 2px solid #fff;
+ /* Texto da direita para esquerda */
+}
+
+
+
+
+body.dark .container-search input:focus ~ .search {
+  background: #fff;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+//perninha do X
+
+body.dark .container-search input:focus ~ .search::before {
+  background-color: #1a1a1a;
+}
+
+body.dark .container-search input:focus ~ .search::after {
+  background: #1a1a1a;
+
+  
+}
+
+//
+
+body.dark .container-search input::placeholder {
+  color: #fff;
+ /* Alinhamento do placeholder à direita */
+}
 
 
 
