--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -5,32 +5,18 @@
         <ion-icon name="person-circle" id="icon-profile"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
     <div class="titulos-container">
-
-      <ion-title>Mapa de Hospitais</ion-title>
-
-    
-
+      <ion-title>Hospitais Por Perto</ion-title>
     </div>
-
-    
-
     <ion-buttons slot="end">
       <div class="container-search">
         <input type="text" placeholder="Search...">
         <div class="search"></div>
       </div>
     </ion-buttons>
-    
-
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">mapa</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <capacitor-google-map class="mapa-container" #map></capacitor-google-map>
 </ion-content>
